--- a/settings.json
+++ b/settings.json
@@ -331,7 +331,8 @@
     "titleBar.activeBackground": "#000000",
     "editorGroupHeader.tabsBackground": "#000000",
     "terminal.background": "#000000",
-    "panel.background": "#000000"
+    "panel.background": "#000000",
+    "sideBar.background": "#000000"
   },
   "rust-analyzer.inlayHints.closureReturnTypeHints.enable": "always",
   "rust-analyzer.inlayHints.discriminantHints.enable": "always",
